# ecs3D

./: README.md
amtms-control-panel/: package.json
amtms-control-panel/src/: App.vue  main.ts
amtms-control-panel/src-tauri/: Cargo.toml
amtms-control-panel/src-tauri/src/: bevy_starter.rs  main.rs
amtms-control-panel/src/api/: DataLoader.ts  PythonProcessor.ts
amtms-control-panel/src/components/: ChooseTerrainDataComponent.vue  GTPGenerateComponent.vue  LaunchBevyAppComponent.vue
amtms-control-panel/src/router/: index.ts
amtms-control-panel/src/stores/: bevyHttp.ts
amtms-control-panel/src/utils/: request.ts
amtms-control-panel/src/views/: LoadDataPage.vue
crates/amtms_geo/: Cargo.toml
crates/amtms_geo/src/: api.rs  gtp.rs  lib.rs  python_adapter.rs  voxel.rs
crates/amtms_geo/src/api/: gtp.rs
crates/amtms_geo/src/register/: gtp.rs
crates/amtms_graphics/: Cargo.toml
crates/amtms_graphics/src/: lib.rs  prelude.rs
crates/amtms_graphics/src/render/: prelude.rs
crates/amtms_internal/: Cargo.toml
crates/amtms_internal/src/: lib.rs
crates/amtms_physics/: Cargo.toml
crates/amtms_physics/src/: components.rs  lib.rs
crates/amtms_python/: Cargo.toml  pyproject.toml
crates/amtms_python/src/: geo.rs  lib.rs  python_env.rs
crates/amtms_register/: Cargo.toml
crates/amtms_register/src/: lib.rs
crates/amtms_tool/: Cargo.toml
crates/amtms_tool/src/: camera.rs  clip.rs  lib.rs  prelude.rs  register.rs
crates/amtms_tool/src/api/: status.rs
crates/amtms_tool/src/camera/: camera_controller.rs  location_ui.rs  prelude.rs
crates/amtms_tool/src/clip/: clip_plane_generator.rs  mesh_regenerator.rs  plane_generator.rs  prelude.rs  register.rs  ui.rs  utils.rs
crates/amtms_tool/src/clip/utils/: delaunay.rs
crates/amtms_webapi/: Cargo.toml
crates/amtms_webapi/src/: controller.rs  http_server.rs  lib.rs
crates/amtms_webapi/src/controller/: geo.rs
crates/amtms_webapi/src/controller/geo/: gtp.rs
crates/amtms_webapi/src/controller/tool/: status.rs
scripts/python/: geo_drill.py
