[package]
name = "amtms_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "amtms_python"
#crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.3", features = ["extension-module", "auto-initialize"] }
bevy = "0.10.1"
clap = { version = "4.2.4", features = ["derive"] }
