[package]
name = "amtms_webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amtms_geo = { path = "../amtms_geo" }
amtms_tool = {path = "../amtms_tool"}

actix-web = "4.3.1"
actix-cors = "0.6.4"
bevy = "0.10.1"
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }